[package]
name = "mizuki_ui"
version = "0.0.1"
authors = ["bilabila <bilabila@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# egui = "0.19.0"
# eframe = { version = "0.19.0", features = ["persistence"] }
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
# egui_extras = { path = "../egui/crates/egui_extras" }
egui = { git = "https://github.com/emilk/egui", branch = "master" }
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
egui_extras = { git = "https://github.com/emilk/egui", branch = "master"}

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
wasm-bindgen-futures = "0.4"
chrono = {version="0.4",features = ["serde"]}
derivative = "2.2"
derive_builder = "0.12.0"
ehttp = "0.2.0"
serde_json = "1.0.89"
poll-promise = "0.2.0"
rsa = "0.7.2"
rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }


base64 = "0.20.0"
url = "2.3.1"
md5 = "0.7.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
